<resources>
    <string name="app_name">Civere</string>
    <string name="enter_mail">Email Address</string>
    <string name="pass">Password</string>
    <string name="registar">Sign Up</string>
    <string name="login">Sign In</string>
    <string name="img_hotel">imgHotel</string>
    <string name="topo">topo</string>
    <string name="img_Rest">imgRest</string>
    <string name="img_guia">imgGuia</string>
    <string name="img_interest">imgInterest</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="welcome">Welcome.</string>
    <string name="darkmode">Dark Mode</string>
    <string name="new_password">New Password</string>
    <string name="ConfirmPass">Confirm Password</string>
    <string name="Confirm">Confirm</string>
    <string name="Cancell">Cancell</string>
    <string name="firts_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="nick_name">Nick Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="guide">Want to be Guide?</string>
    <string name="log_out">Log Out</string>
    <string name="classification">Classification:</string>
    <string name="contacts">Contacts:</string>

    <string name="address">Address:</string>
    <string name="info">Info:</string>
    <string name="action_settings">Settings</string>
    <string name="SignUPError">There was an error during the Sign Up.</string>
    <string name="LoginErro">Incorrect email or password.</string>
    <string name="Braga">Braga</string>
    <string name="Coimbra" translatable="false">Coimbra</string>
    <string name="New_comment">New Comment</string>
    <string name="Classificacao">Classification</string>
    <string name="Comment">Comment</string>
    <string name="Old_pass">Old Password</string>
    <string name="New_pass">New Password</string>
    <string name="New_number">New Number</string>
    <string name="wrong_pass">Wrong Password</string>
    <string name="pass_error">Password does not match</string>
    <string name="select_city">Select City</string>
    <string name="guidee">Guide</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="price">Price</string>
    <string name="selectPOI">Select Interest Points</string>
    <string name="descricao">Description</string>
    <string name="sugetions">Suggestions</string>
</resources>
