<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
    android:theme="@style/MainTheme">

    <EditText
        android:id="@+id/editText"
        android:longClickable="false"
        android:cursorVisible="false"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="224dp"
        android:layout_marginEnd="50dp"
        android:background="@drawable/email"
        android:autofillHints="@string/enter_mail"
        android:textColor="@color/colorBlack"
        android:ems="10"
        android:textColorHint="@color/colorBlack"
        android:hint="@string/enter_mail"
        android:textAlignment="center"
        android:textSize="13dp"
        android:textIsSelectable="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="300dp"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/pass"
        android:background="@drawable/email"
        android:cursorVisible="false"
        android:textIsSelectable="false"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:textColor="@color/colorBlack"
        android:textColorHint="@color/colorBlack"
        android:textAlignment="center"
        android:textSize="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText" />

    <Button
        android:id="@+id/login"
        android:layout_width="151dp"
        android:layout_height="49dp"
        android:layout_marginTop="68dp"
        android:background="@drawable/entrar"
        android:text="@string/login"
        android:textAllCaps="false"
        android:textColor="@color/colorTextBox"
        android:textSize="22dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toTopOf="@+id/editText2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@color/trans"
        android:fontFamily="@font/regular"
        android:text="@string/registar"
        android:textColor="@color/colorRegistar"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="116dp"
        android:background="@color/trans"
        android:text="@string/welcome"
        android:textColor="@color/settings"
        android:textSize="40dp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="@+id/editText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/errorM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:background="@color/trans"
        android:text="@string/LoginErro"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/editText"
        app:layout_constraintStart_toStartOf="@+id/editText" />


</androidx.constraintlayout.widget.ConstraintLayout>