<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.Change_Pass"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <EditText
        android:id="@+id/old_password"
        android:layout_width="300dp"
        android:layout_height="49dp"

        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="68dp"
        android:autofillHints="@string/pass"
        android:background="@drawable/password_box"
        android:cursorVisible="false"
        android:ems="10"
        android:hint="@string/Old_pass"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintBottom_toTopOf="@+id/confirm_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="300dp"

        android:cursorVisible="false"
        android:layout_height="49dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="68dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/pass"
        android:background="@drawable/password_box"
        android:ems="10"
        android:hint="@string/ConfirmPass"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="300dp"
        android:layout_height="49dp"

        android:layout_marginStart="50dp"
        android:layout_marginTop="320dp"
        android:layout_marginEnd="50dp"
        android:autofillHints="@string/pass"
        android:background="@drawable/password_box"
        android:cursorVisible="false"
        android:ems="10"
        android:hint="@string/new_password"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColorHint="@color/colorBlack"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.363"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/backL"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/seta"
        android:backgroundTint="@color/colorSeta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/change_password"
        android:layout_width="wrap_content"
        android:layout_height="53dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="80dp"
        android:layout_marginEnd="50dp"
        android:background="@color/trans"
        android:text="@string/new_password"
        android:textColor="@color/settings"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="160dp"
        android:background="@drawable/entrar"
        android:text="@string/Confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/new_password" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:text="@string/pass_error"
        android:textColor="@color/red"
        android:visibility="invisible"
        app:layout_constraintBottom_toTopOf="@+id/confirm"
        app:layout_constraintEnd_toEndOf="@+id/confirm"
        app:layout_constraintStart_toStartOf="@+id/confirm" />

</androidx.constraintlayout.widget.ConstraintLayout>