<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nick"
                android:layout_width="300dp"
                android:layout_height="49dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="42dp"
                android:autofillHints="@string/nick_name"
                android:background="@drawable/password_box"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/nick_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="13dp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last" />

            <Button
                android:id="@+id/backL"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/seta"
                android:backgroundTint="@color/colorSeta"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/change_password"
                android:layout_width="wrap_content"
                android:layout_height="53dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="80dp"
                android:background="@color/trans"
                android:text="@string/registar"
                android:textColor="@color/settings"
                android:textSize="30sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="300dp"
                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/enter_mail"
                android:background="@drawable/password_box"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/enter_mail"
                android:longClickable="false"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textIsSelectable="false"
                android:textSize="13dp"
                app:layout_constraintStart_toStartOf="@+id/name"
                app:layout_constraintTop_toBottomOf="@+id/nick" />

            <EditText
                android:id="@+id/new_password"
                android:layout_width="300dp"
                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/pass"
                android:background="@drawable/password_box"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/pass"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/editText"
                app:layout_constraintTop_toBottomOf="@+id/editText" />

            <EditText
                android:id="@+id/confirm_password"
                android:layout_width="300dp"

                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/pass"
                android:background="@drawable/password_box"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/ConfirmPass"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="13sp"
                app:layout_constraintStart_toStartOf="@+id/new_password"
                app:layout_constraintTop_toBottomOf="@+id/new_password" />

            <Button
                android:id="@+id/confirm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="15dp"
                android:background="@drawable/entrar"
                android:text="@string/Confirm"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/trans"
                android:text=""
                app:layout_constraintBottom_toTopOf="@+id/confirm"
                app:layout_constraintStart_toStartOf="@+id/confirm" />

            <EditText
                android:id="@+id/phone"
                android:layout_width="300dp"
                android:layout_height="49dp"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/phone_number"
                android:background="@drawable/password_box"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/phone_number"
                android:inputType="phone"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="13dp"
                app:layout_constraintStart_toStartOf="@+id/confirm_password"
                app:layout_constraintTop_toBottomOf="@+id/confirm_password" />

            <EditText
                android:id="@+id/name"
                android:layout_width="300dp"
                android:layout_height="49dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="160dp"
                android:layout_marginEnd="42dp"
                android:autofillHints="@string/firts_name"
                android:background="@drawable/password_box"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/firts_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColorHint="@color/colorBlack"
                android:textColor="@color/colorBlack"
                android:textSize="13dp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/last"
                android:layout_width="300dp"
                android:layout_height="49dp"
                android:layout_marginStart="42dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="42dp"
                android:autofillHints="@string/last_name"
                android:background="@drawable/password_box"
                android:cursorVisible="false"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:textAlignment="center"
                android:textColor="@color/colorBlack"
                android:textColorHint="@color/colorBlack"
                android:textSize="13dp"
                android:textStyle="normal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.481"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/name" />

            <RadioButton
                android:id="@+id/guide"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="35dp"
                android:layout_marginEnd="60dp"
                android:layout_marginBottom="15dp"
                android:text="@string/guide"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/confirm"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/phone"
                app:layout_constraintTop_toBottomOf="@+id/phone" />

            <TextView
                android:id="@+id/errorM"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="28dp"
                android:background="@color/trans"
                android:text="@string/SignUPError"
                android:textColor="@color/red"
                android:visibility="invisible"
                app:layout_constraintBottom_toTopOf="@+id/name"
                app:layout_constraintStart_toStartOf="@+id/editText" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>



</androidx.constraintlayout.widget.ConstraintLayout>